auth-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-container
          image: navin3d/infrasight-auth-service
          ports:
            - containerPort: 8011
---
apiVersion: v1
kind: Service
metadata:
  name: auth-cip
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - port: 8011
      targetPort: 8011
