discovery-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eureka-deployment
  template:
    metadata:
      labels:
        app: eureka-deployment
    spec:
      containers:
        - name: eureka-container
          image: navin3d/eureka-discovery
          ports:
            - containerPort: 8010
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-cip
spec:
  type: ClusterIP
  selector:
    app: eureka-deployment
  ports:
    - port: 8010
      targetPort: 8010
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-np
spec:
  type: NodePort
  selector:
    app: eureka-deployment
  ports:
    - port: 8050
      targetPort: 8010
      nodePort: 30000
