gateway-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service-container
          image: navin3d/infrasight-gatewsy-service
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-cip
spec:
  type: ClusterIP
  selector:
    app: gateway-service
  ports:
    - port: 8080
      targetPort: 8080
