ml-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml-service
  template:
    metadata:
      labels:
        app: ml-service
    spec:
      containers:
        - name: ml-container
          image: navin3d/infrasight-ml-service
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ml-cip
spec:
  type: ClusterIP
  selector:
    app: ml-service
  ports:
    - port: 8000
      targetPort: 8000
