mongo-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-service
  template:
    metadata:
      labels:
        app: mongo-service
    spec:
      volumes:
        - name:  mongo-data
          persistentVolumeClaim:
            claimName: mongo-pvc
      containers:
        - name: mongo-db-container
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-cip
spec:
  type: ClusterIP
  selector:
    app: mongo-service
  ports:
    - port: 27017
      targetPort: 27017
