prophet-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prophet-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: prophet-service
  template:
    metadata:
      labels:
        app: prophet-service
    spec:
      containers:
        - name: prophet-conatiner
          image: navin3d/prophet-service
          ports:
            - containerPort: 8013
---
apiVersion: v1
kind: Service
metadata:
  name: prophet-cip
spec:
  type: ClusterIP
  selector:
    app: prophet-service
  ports:
    - port: 8013
      targetPort: 8013
