server-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server-service
  template:
    metadata:
      labels:
        app: server-service
    spec:
      containers:
        - name: server-container
          image: navin3d/infrasight-server-service
          ports:
            - containerPort: 8014
---
apiVersion: v1
kind: Service
metadata:
  name: server-cip
spec:
  type: ClusterIP
  selector:
    app: server-service
  ports:
    - port: 8014
      targetPort: 8014
