ui-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ui-service
  template:
    metadata:
      labels:
        app: ui-service
    spec:
      containers:
        - name: ui-service-container
          image: navin3d/infrasight-ui-service
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ui-cip
spec:
  type: ClusterIP
  selector:
    app: ui-service
  ports:
    - port: 3000
      targetPort: 3000
